# iced

./: Cargo.toml
core/: Cargo.toml
core/src/: angle.rs  background.rs  border.rs  border_radius.rs  color.rs  gradient.rs  shadow.rs  vector.rs
core/src/widget/: text.rs
examples/color_palette/: Cargo.toml
style/: Cargo.toml
style/src/: application.rs  button.rs  container.rs  menu.rs  pick_list.rs  radio.rs  scrollable.rs  text_editor.rs  text_input.rs  toggler.rs
