[package]
name = "iced_style"
description = "The default set of styles of Iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
iced_core.workspace = true
iced_core.features = ["palette"]
serde = "1.0"

palette.workspace = true
once_cell.workspace = true
